make inner classes static in AbstractValidationFormatterWriter
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>